--- a/Code/FE/src/App.css
+++ b/Code/FE/src/App.css
@@ -1,22 +1,33 @@
 .wedding {
   margin-left: 100px;
 }
-body{
+
+/*body .image1 {
   position: absolute;
-width: 1920;
-height: 1048;
 left: 0px;
 top: 0px;
 background: url(nen.png) no-repeat center fixed;
 background-size: cover;
-
-
 filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 background-repeat: no-repeat;
-}
+display: flex;
+}*/
+
+
+.wedding  input  {position: absolute;
+  position: absolute;
+width: 500px;
+height: 50;
+left: 684px;
+top: 256px;
+border: 5px solid #E5E5E5;
+box-sizing: border-box;
+border-radius: 5px;}
+
+
+  
 .menu ul{position: absolute;
-  width: 1920px;
-  height: 105px;
+  display: flex;
   left: 0px;
   top: 0px;
   }
@@ -25,7 +36,6 @@ background-repeat: no-repeat;
     height: 96px;
     left: 567px;
     top: 3px;
-    
     font-family: Almendra;
     font-style: normal;
     font-weight: normal;
@@ -38,12 +48,27 @@ background-repeat: no-repeat;
     color: #FFFFFF;
     
     mix-blend-mode: hard-light;}
+    #wd{position: absolute;
+      width: 122px;
+      height: 107px;
+      left: 15px;
+      top: -2px;
+      font-family: Almendra;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 50px;
+      line-height: 65px;
+      display: flex;
+      align-items: center;
+      text-align: center;
+      text-transform: uppercase;
+      color: rgba(248, 220, 121, 0.84);
+    }
 #home{position: absolute;
   width: 120px;
   height: 98px;
   left: 211px;
   top: 3px;
-  
   font-family: Almendra;
   font-style: normal;
   font-weight: normal;
@@ -52,9 +77,7 @@ background-repeat: no-repeat;
   display: flex;
   align-items: center;
   text-align: center;
-  
   color:#FFFFFF;
-  
   mix-blend-mode: hard-light;}
   #news{position: absolute;
     width: 120px;
@@ -156,3 +179,6 @@ background-repeat: no-repeat;
   background: url(look.png);
   mix-blend-mode: soft-light;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));}
+  input{
+    display: flex;
+  }
